modification du bouton see all

--- a/exercice8.css
+++ b/exercice8.css
@@ -150,8 +150,12 @@ p {
 	cursor: pointer;
 }
 
-.boutonSeeAll:hover {
+.boutonSeeAll:hover  {
 	background-color: black;
+}
+
+.boutonSeeAll:hover .texteSeeAll {
+	color: white;
 }
 
 .texteSeeAll {
